--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -1,5 +1,9 @@
-# Go to sleep after one hour (1*60*60*1000ms)
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+# Go to sleep after 15 minutos (1*15*60*1000ms)
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
+
+# Number Bluetooth connection at a time
+CONFIG_BT_MAX_CONN=5
+CONFIG_BT_MAX_PAIRED=5
